# aula08_bootcamp

./: README.md  dados.parquet  etl-DESKTOP-FDRJDID.py  etl.py  pipeline.py  pyproject.toml  test_etl.py
