[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Sergio Semprebom <sergiosemprebom@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.3"
pandas = "^2.2.3"
fastparquet = "^2024.5.0"
pyarrow = "^17.0.0"
schema = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
